@@ -85,6 +85,9 @@ d-portal.org还处于非常早期的开发中，预计Alpha版本四月中旬。
 #beige_alert2_text
 d-portal.org目前正在重新导入所有数据，因此您可能会遇到不完整的信息。<br/> 需要长达24小时才能重新填写d-portal。 对此停机感到抱歉，感谢您的耐心等待。
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text
 回到发展门户
 
