@@ -85,6 +85,9 @@ d-portal.org is currently in BETA.
 #beige_alert2_text
 d-portal.org is currently re-importing all data so you may experience incomplete information.<br/>It will take at least 24 hours to repopulate d-portal. Apologies for this downtime and thank you for your patience.
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text
 Back to D-Portal
 
