@@ -85,6 +85,9 @@ d-portal.org est actuellement en version bêta.
 #beige_alert2_text
 d-portal.org est actuellement en train de réimporter toutes les données afin que vous puissiez rencontrer des informations incomplètes. <br/> Il faudra jusqu'à 24 heures pour repeupler d-portal. Nous vous remercions de votre patience.
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text 
 Retour à Portail de Développement
 
