@@ -35,6 +35,11 @@
 	<div class="beigealert"><img src="{flava}alert_icon_top.png" alt="{alert_icon_alt_text}" width="15" height="15"> {beige_alert_text} <a href="/html/feedback.html" class="beige" target="_blank">{beige_alert_here_text}</a>.</div>
 </div>
 
+#beige_delete
+<div class="beigealert_wrap">
+	<div class="beigealert">{beige_alert3_text}</div>
+</div>
+
 #status
 <span class="badge beta">BETA</span>
 
