@@ -85,6 +85,9 @@ d-portal.org बीटा में है.
 #beige_alert2_text
 d-portal.org वर्तमान में सभी डेटा पुनः आयात कर रहा है ताकि आप अपूर्ण जानकारी का अनुभव कर सकें। <br/> d-portal को पुनर्स्थापित करने में 24 घंटे लगेंगे इस डाउनटाइम के लिए माफी और आपके धैर्य के लिए धन्यवाद।
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text
 विकास को पोर्टल पर
 
