@@ -85,6 +85,9 @@ d-portal.orgは現在ベータ版です。
 #beige_alert2_text
 d-portal.orgは現在、すべてのデータを再インポートしているため、不完全な情報が発生する可能性があります。 <br/> d-portalを再構築するまでには最大24時間かかります。 このダウンタイムのお詫びとあなたのご忍耐のためにありがとう。
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text
 戻る開発ポータルへ
 
