@@ -85,6 +85,9 @@ d-portal.org se encuentra actualmente en beta.
 #beige_alert2_text
 d-portal.org está actualmente reimportando todos los datos para que pueda experimentar información incompleta. <br/> Le llevará hasta 24 horas repoblar d-portal. Disculpas por este tiempo de inactividad y gracias por tu paciencia.
 
+#beige_alert3_text
+IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR DATA WILL BE DELETED.
+
 #mainback_tip_text
 Volver a la Portal de Desarrollo
 
